--- a/less/forum.less
+++ b/less/forum.less
@@ -1,5 +1,6 @@
 .carousel {
   min-height: 60vh;
+  margin-top: -54px;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -84,7 +85,7 @@
   display: flex;
   position: relative;
   margin-top: auto;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
   z-index: 5;
 }
 
@@ -111,4 +112,16 @@
 .carousel__control:hover {
   opacity: 1;
   cursor: pointer;
+}
+div#drawer {
+  border: 0px !important;
+}
+header#header {
+  background: transparent;
+}
+button.Dropdown-toggle.Button.Button--flat {
+  color: #fff;
+}
+a#home-link {
+  color: #ffffff;
 }
