--- a/less/forum.less
+++ b/less/forum.less
@@ -1,6 +1,6 @@
 .carousel {
   min-height: 60vh;
-  margin-top: -54px;
+  margin-top: -1px;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -85,7 +85,7 @@
   display: flex;
   position: relative;
   margin-top: auto;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
   z-index: 5;
 }
 
@@ -117,7 +117,7 @@ div#drawer {
   border: 0px !important;
 }
 header#header {
-  background: transparent;
+  background: #3e3e3e;
 }
 button.Dropdown-toggle.Button.Button--flat {
   color: #fff;
