time for transition added

--- a/less/forum.less
+++ b/less/forum.less
@@ -125,3 +125,6 @@ button.Dropdown-toggle.Button.Button--flat {
 a#home-link {
   color: #ffffff;
 }
+button.Button.Button--link {
+  color: #fff;
+}
