compiled js for production

--- a/less/forum.less
+++ b/less/forum.less
@@ -113,9 +113,8 @@
   opacity: 1;
   cursor: pointer;
 }
-div#drawer {
-  border: 0px !important;
-}
+/*  Inizio aggiustamenti sticky header di Flarum  */
+
 header#header {
   background: #3e3e3e;
 }
@@ -125,6 +124,12 @@ button.Dropdown-toggle.Button.Button--flat {
 a#home-link {
   color: #ffffff;
 }
-button.Button.Button--link {
-  color: #fff;
+.Search-input input {
+  background: #ffffff;
+}
+.Button:active, .Button.active, .open>.Dropdown-toggle.Button {
+  background-color: #d4c785;
+}
+.Button:hover, .Button:focus, .Button.focus {
+  background-color: #d4c785;
 }
